# OpenClaudia

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_FEATURES.md  COMPARISON.md  Cargo.toml  QA_REPORT.md  README.md  acp-protocol-server.md  generative_art.py  my_first_creations.md  quantum_randomness.py  spiral_particles.py
.chainlink/: issues.db  session.json
.chainlink/rules/: global.md
.claude/: OPENCLAUDIA.md
.design/: acp-protocol-server.md
.github/: dependabot.yml
assets/: device_flow.html
checkpoint/: state.json
docs/: claude-code-system-prompt-analysis.md  evidence-based-coding-guardrails.md  production-audit-problems.md
docs/designs/: 507-coordinator.md  508-memdir.md  510-session-state.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_anthropic_convert.rs  fuzz_build_request.rs  fuzz_cron_validate.rs  fuzz_hook_matcher.rs  fuzz_json_tool_args.rs  fuzz_path_resolve.rs  fuzz_safe_truncate.rs  fuzz_sse_event.rs  fuzz_streaming_markdown.rs
heartbeats/: lOrm.json
issues/003a29eb-1abc-4c93-b4d8-ac2000f8a74d/: issue.json
issues/00648987-e445-4213-abbf-6faeef2a5244/: issue.json
issues/006a7a3f-12a8-4e12-bd02-8e971eae5a07/: issue.json
issues/009d33da-5059-41d9-9407-4448e3ecbde8/: issue.json
issues/00a7830b-97d4-4920-b522-8a0a01565456/: issue.json
issues/00c3f362-2d1f-4045-ba09-ce4635e77fcb/: issue.json
issues/010c5bd2-f897-429d-85d1-f04c36c3e0ac/: issue.json
issues/01a1fe0d-4577-44ae-bc63-6bf24380cddc/: issue.json
issues/0250cef0-1440-452e-ac97-dea2c909f471/: issue.json
issues/0283a120-03b1-425d-ba6e-7776abfdfb00/: issue.json
issues/02a0bb32-a917-48af-bc52-8fcccfde33a4/: issue.json
issues/02f4ed92-d0e1-4693-a429-152892c4e94b/: issue.json
issues/02f789fa-670c-41fa-9ad5-4b9e2b4007cb/: issue.json
issues/030ad811-b650-41aa-bb1d-04e3debdcc6a/: issue.json
issues/030c6bc5-7fef-4e32-a742-987420df3f12/: issue.json
issues/034457ca-f9b3-42fc-a2f4-242c2483a434/: issue.json
issues/03ac3f85-0c2e-438b-90b5-2bde35252c37/: issue.json
issues/03bbd045-3892-4f31-a58c-502efbb1feb6/: issue.json
issues/04384912-2a3d-471a-8ccb-50a372833a6f/: issue.json
issues/044f1d89-a2db-49f7-922f-13a07c17b6bd/: issue.json
issues/04a1506d-8eef-47d7-8dc9-3e31fa5fefba/: issue.json
issues/0507ef75-b69b-4555-94e0-ca265adb4ff0/: issue.json
issues/050b750d-c346-4214-8287-088d2e80041e/: issue.json
issues/0527b748-873c-4cb7-a688-ffb7edd1b677/: issue.json
issues/05463966-6d0d-43da-8ef6-59a2aa9eff3c/: issue.json
issues/05627fa6-df38-4ce6-8571-681be1113fdb/: issue.json
issues/0570f229-1d34-4f10-a667-b8e932183c3c/: issue.json
issues/0582677c-07fd-45ec-8ef2-4edd9bd58a3f/: issue.json
issues/05b8284c-263a-4e0c-95fc-7f879a27b46d/: issue.json
issues/05c1618b-a40d-4a88-8902-5fef60512da1/: issue.json
issues/05f58e3b-14d2-4837-ae07-b96cc25520b7/: issue.json
issues/05f7d368-d510-443e-a4bb-c1c152a43f90/: issue.json
locks/: -1.json  -10.json  -100.json  -101.json  -102.json  -103.json  -104.json  -105.json  -106.json  -107.json  -108.json  -109.json  -11.json  -110.json  -111.json  -112.json  -113.json  -114.json  -115.json  -116.json  -117.json  -118.json  -119.json  -12.json  -120.json  -121.json  -122.json  -123.json  -124.json  -125.json  -126.json  -13.json  -14.json  -15.json  -16.json  -17.json  -18.json  -19.json  -2.json  -20.json  (+168 more)
meta/: counters.json
src/: acp.rs  auto_learn.rs  claude_code_prompt.txt  claude_credentials.rs  codex_credentials.rs  compaction.rs  config.rs  context.rs  decision.rs  evidence.rs  final_gate.rs  grounded_loop.rs  guardrails.rs  hooks.rs  ledger.rs  lib.rs  main.rs  mcp.rs  mcp_oauth.rs  memory.rs  memory.rs.bak  oauth.rs  output_style.rs  permissions.rs  pipeline.rs  plugins.rs  prompt.rs  providers.rs  proxy.rs  rules.rs  session.rs  skills.rs  slash_commands.rs  streaming.rs  subagent.rs  task_spec.rs  thinking.rs  tool_intercept.rs  tools.rs  transcript.rs  (+3 more)
tests/: acp_ide_state_e2e.rs  agent_color_teammate_id_e2e.rs  analytics_sink_dyn_dispatch_e2e.rs  analyze_with_hint_e2e.rs  anthropic_builder_helpers_e2e.rs  anthropic_content_block_e2e.rs  api_key_redaction_e2e.rs  ask_user_question_validation_e2e.rs  auto_compactor_e2e.rs  bash_background_e2e.rs  bash_dispatch_validation_e2e.rs  bash_integration.rs  bash_output_kill_dispatch_e2e.rs  behavior_mode_methods_e2e.rs  chainlink_allowlist_matrix_e2e.rs  chat_request_message_serde_e2e.rs  claude_credentials_auth_e2e.rs  claude_credentials_constants_e2e.rs  cli_exit_status_e2e.rs  compact_boundary_helpers_e2e.rs  compaction_archive_extract_e2e.rs  compaction_config_budget_e2e.rs  compaction_constructors_e2e.rs  compaction_estimator_e2e.rs  config_guardrails_session_e2e.rs  config_validation_e2e.rs  context_injector_e2e.rs  coordinator_e2e.rs  coordinator_permission_bridge_e2e.rs  cron_e2e.rs  crosslink_dispatch_validation_e2e.rs  diagnostic_serde_shape_e2e.rs  edit_file_dispatch_validation_e2e.rs  enterprise_policy_check_methods_e2e.rs  estimate_message_tokens_deeper_e2e.rs  estimate_tokens_boundaries_e2e.rs  execute_tool_envelope_e2e.rs  extract_extensions_matrix_e2e.rs  extract_response_text_matrix_e2e.rs  extract_token_usage_matrix_e2e.rs  (+117 more)
trust/: allowed_signers
(+1768 files in other folders)
