[package]
name = "openclaudia"
version = "0.1.0"
edition = "2021"
description = "Open-source universal agent harness - Claude Code capabilities for any AI"
license = "MIT"
repository = "https://github.com/yourusername/openclaudia"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (axum 0.8)
axum = { version = "0.8", features = ["json", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for upstream requests
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "6"

# Regex for hook matchers
regex = "1"

# OAuth and cryptography
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"

# CLI enhancements
rustyline = { version = "14", features = ["derive"] }
indicatif = "0.17"
crossterm = "0.28"
arboard = "3"

# TUI framework
ratatui = "0.30"

# SQLite for stateful memory
rusqlite = { version = "0.32", features = ["bundled"] }

# Headless browser for web scraping (optional, heavy dependency)
headless_chrome = { version = "1", optional = true }
scraper = { version = "0.20", optional = true }

[features]
default = ["browser"]
browser = ["headless_chrome", "scraper"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
predicates = "3"

[lib]
name = "openclaudia"
path = "src/lib.rs"

[[bin]]
name = "openclaudia"
path = "src/main.rs"
